Worklet: Reject addModule() with script's error to rethrow if available

This CL makes Worklet#addModule() fail with a more specific error object
compared to before.

Before this change, Worklet::addModule() was rejected with AbortError regardless
of an actual error reason, and that made it difficult for developers to debug
worklets. This behavior was defined in the Worklets spec, but it was changed
recently (see the links below).

After this change, Worklet::addModule() is rejected with script's error to
rethrow when it is available as the new spec defines.

Spec changes:
- https://github.com/w3c/css-houdini-drafts/pull/958
- https://github.com/w3c/css-houdini-drafts/pull/967

Chromestatus:
- https://www.chromestatus.com/feature/5116796497559552

Bug: 782066
Change-Id: Iabd30eff28ed1bffed9219898649a89b8abebbb2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1258785
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Reviewed-by: Hiroshige Hayashizaki <hiroshige@chromium.org>
Commit-Queue: Hiroki Nakagawa <nhiroki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#703606}