third_party/blink/renderer/core/workers/worklet_pending_tasks.cc
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/renderer/core/workers/worklet_pending_tasks.h"
 
+#include "third_party/blink/renderer/bindings/core/v8/serialization/serialized_script_value.h"
 #include "third_party/blink/renderer/core/dom/dom_exception.h"
 #include "third_party/blink/renderer/core/workers/worklet.h"
 #include "third_party/blink/renderer/platform/heap/heap.h"
@@ -23,18 +24,35 @@ void WorkletPendingTasks::InitializeCounter(int counter) {
   counter_ = counter;
 }
 
-void WorkletPendingTasks::Abort() {
+void WorkletPendingTasks::Abort(
+    scoped_refptr<SerializedScriptValue> error_to_rethrow) {
   DCHECK(IsMainThread());
+  // This function can be called from the following steps. See
+  // WorkletModuleTreeClient::NotifyModuleTreeLoadFinished().
+  //
   // Step 3: "If script is null, then queue a task on outsideSettings's
   // responsible event loop to run these steps:"
   //   1: "If pendingTaskStruct's counter is not -1, then run these steps:"
   //     1: "Set pendingTaskStruct's counter to -1."
   //     2: "Reject promise with an "AbortError" DOMException."
+  //
+  // Step 4: "If script's error to rethrow is not null, then queue a task on
+  // outsideSettings's responsible event loop given script's error to rethrow to
+  // run these steps:
+  //   1: "If pendingTaskStruct's counter is not -1, then run these steps:"
+  //     1: "Set pendingTaskStruct's counter to -1."
+  //     2: "Reject promise with error to rethrow."
   if (counter_ != -1) {
     counter_ = -1;
     worklet_->FinishPendingTasks(this);
-    resolver_->Reject(
-        MakeGarbageCollected<DOMException>(DOMExceptionCode::kAbortError));
+    if (error_to_rethrow) {
+      ScriptState::Scope scope(resolver_->GetScriptState());
+      resolver_->Reject(error_to_rethrow->Deserialize(
+          resolver_->GetScriptState()->GetIsolate()));
+    } else {
+      resolver_->Reject(
+          MakeGarbageCollected<DOMException>(DOMExceptionCode::kAbortError));
+    }
   }
 }
 
