third_party/blink/renderer/core/workers/worklet_pending_tasks.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace blink {
 
+class SerializedScriptValue;
 class Worklet;
 
 // Implementation of the "pending tasks struct":
@@ -32,7 +33,7 @@ class CORE_EXPORT WorkletPendingTasks final
   void InitializeCounter(int counter);
 
   // Sets |counter_| to -1 and rejects the promise.
-  void Abort();
+  void Abort(scoped_refptr<SerializedScriptValue> error_to_rethrow);
 
   // Decrements |counter_| and resolves the promise if the counter becomes 0.
   void DecrementCounter();
